@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2895 2019/08/09 19:12:14 brook Exp $
+# $NetBSD: Makefile,v 1.2896 2019/08/09 19:13:05 brook Exp $
 #
 
 COMMENT=	Development utilities
@@ -27,6 +27,7 @@ SUBDIR+=	R-cli
 SUBDIR+=	R-clipr
 SUBDIR+=	R-crayon
 SUBDIR+=	R-desc
+SUBDIR+=	R-devtools
 SUBDIR+=	R-evaluate
 SUBDIR+=	R-fansi
 SUBDIR+=	R-fs
