@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 19:13:05 brook Exp $
+
+SHA1 (R/devtools_2.1.0.tar.gz) = 46ba1650e550325c6b7ebbce49f4c7d81849f868
+RMD160 (R/devtools_2.1.0.tar.gz) = 22e144a6281bcf758e310e79a58756de3e7bd486
+SHA512 (R/devtools_2.1.0.tar.gz) = 0e562f954a0840b0b049f7acce6854f09b4501233f4e23f5c43c6991c35040fa62337154596fde2ad4f813225d23db822096ea77db7cb37af8a82f3fca46d30b
+Size (R/devtools_2.1.0.tar.gz) = 378899 bytes
